Bug 262303 - importing a RAW picture results in empty view
Summary: importing a RAW picture results in empty view
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-RawImport-Native (other bugs)
Version First Reported In: 2.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-06 14:43 UTC by S. Burmeister
Modified: 2022-01-26 04:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-01-06 14:43:16 UTC
Version:           2.0.0 (using KDE 4.5.90) 
OS:                Linux

If one opens a RAW picture in the editor the preview is calculated and shown. Yet as soon as one clicks on "import" in the RAW decoding sidebar the view becomes empty and no picture is imported.

svn rev. 1212139

Reproducible: Always
Comment 1 caulier.gilles 2011-01-06 14:46:24 UTC
Yes, i confirm.

Gilles Caulier
Comment 2 Marcel Wiesweg 2011-01-06 15:28:26 UTC
The problem is this line in slotRawLoadFromTool:
    if (!rawImport->demosaicingSettingsDirty())
which returns false.
It also does not work if the raw preview was never generated.
Don't know what went wrong here
Comment 3 Marcel Wiesweg 2011-01-06 16:10:52 UTC
SVN commit 1212333 by mwiesweg:

Fix comparison.

Because of this bug, the following always failed:
DRawDecoding a = b;
if (a == b) { ... } // returned false

BUG: 262303


 M  +1 -1      loadingdescription.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212333
Comment 4 S. Burmeister 2011-01-07 16:24:48 UTC
Not sure whether this is related but if you click on "import" while digikam is still calculating the import preview in the image editor you still get an empty view.
Comment 5 Marcel Wiesweg 2011-01-07 19:03:17 UTC
Good point.

Gilles, currently the check is if the "Update" button of raw settings is enabled. We need to check if a) the button is disabled AND b) no filter is running? Or a bool dirty flag?
Comment 6 caulier.gilles 2011-01-07 19:44:15 UTC
Well, the Import button must be disabled until computation is working. Why ? because the image imported will be the one computed in rawimport tool for preview.

Remember that old behavior been to recompute the image when import is pressed, because preview image been a reduced version in all case. Now it's different, due to a lack of preview for some important options to decode raw has demosicing method, which has no effect in half preview extraction.

I think this problem exist too into trunk (1.8.0), because i not tested this case, if i remember. Swen, can you confirm this ?

Gilles Caulier
Comment 7 Marcel Wiesweg 2011-01-07 23:31:59 UTC
Open a RAW image. The image is being loaded, the Update button is disabled - all right.
Now you click on Import. Check and conclusion is: "button is disabled => image is ready". But it is not, there is no image, it is still being loaded.
Comment 8 caulier.gilles 2011-01-10 11:51:36 UTC
Do you see this message on the console :

Object::connect: No such signal Digikam::RawSettingsBox::signalDemosaicingChanged() in /mnt/data/Devel/SVN/branches/digikam/core/utilities/imageeditor/rawimport/rawimport.cpp:105

Gilles