Fix comparison.

Because of this bug, the following always failed:
DRawDecoding a = b;
if (a == b) { ... } // returned false

BUG: 262303

svn path=/branches/extragear/graphics/digikam/core/; revision=1212333